--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
       server:
         git:
           default-label: main
-          uri: https://github.com/TinyAntu/PrestaBanco_App_Microservicios_Backend.git
+          uri: https://github.com/TinyAntu/PrestaBanco_App_Microservicios_Backend
           search-paths: config-data
   application:
     name: config-service
