--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -9,6 +9,20 @@ eureka:
       default-zone: http://localhost:8761/eureka
   instance:
     hostname: localhost
+  
+globalcors:
+  corsConfigurations:
+    '[/**]':
+      allowedOrigins: "*"
+      allowedMethods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+      allowedHeaders:
+        - "*"
+      allowCredentials: true
+      maxAge: 3600
 
 spring:
   cloud:
