--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -13,6 +13,22 @@ eureka:
 spring:
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':  # Aplica a todas las rutas del Gateway
+            allowedOrigins:
+              - "http://localhost:5173" # Reemplaza con la URL del frontend
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS  # Necesario para preflight requests
+            allowedHeaders:
+              - "*"  # Permitir todos los encabezados
+            allowCredentials: true  # Permitir envío de cookies o tokens
+            maxAge: 3600  # Cacheo de la configuración CORS
+
       discovery:
         locator:
           enabled: true
@@ -37,17 +53,3 @@ spring:
           uri: lb://followCredit-service
           predicates:
             - Path=/followCredit/**
-
-      globalcors:
-        corsConfigurations:
-          '[/**]':  # Aplica a todas las rutas
-            allowedOrigins: "*"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-            allowedHeaders:
-              - "*"
-            allowCredentials: true
-            maxAge: 3600
