--- a/gateway-service/src/main/resources/bootstrap.yaml
+++ b/gateway-service/src/main/resources/bootstrap.yaml
@@ -5,3 +5,21 @@ spring:
     config:
       enabled: true
       uri: http://localhost:8081
+    gateway:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Methods, RETAIN_UNIQUE
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins:
+              - "http://localhost:5173" # Cambia esto al origen de tu frontend
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowedHeaders: "*"
+            exposedHeaders: "*"
+            allowCredentials: true
+
