--- a/config-data/simulate-service.yaml
+++ b/config-data/simulate-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8091
+  port: 0
 
 eureka:
   client:
@@ -9,3 +9,4 @@ eureka:
       default-zone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    prefer-ip-address: true
