--- a/config-data/requestCredit-service.yaml
+++ b/config-data/requestCredit-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8093
+  port: 0
 eureka:
   client:
     fetch-registry: true
@@ -8,3 +8,4 @@ eureka:
       default-zone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    prefer-ip-address: true
