--- a/simulate-service/src/main/resources/bootstrap.yaml
+++ b/simulate-service/src/main/resources/bootstrap.yaml
@@ -6,7 +6,7 @@ spring:
       enabled: true
       uri: http://localhost:8081
   datasource:
-    url: jdbc:postgresql://localhost:5432/PrestaBanco
+    url: jdbc:postgresql://localhost:5432/Simulate
     username: postgres
     password: admin
   jpa:
