--- a/register-service/src/main/resources/bootstrap.yaml
+++ b/register-service/src/main/resources/bootstrap.yaml
@@ -6,10 +6,10 @@ spring:
       enabled: true
       uri: http://localhost:8081
   datasource:
-    url: jdbc:postgresql://localhost:5432/PrestaBanco
+    url: jdbc:postgresql://localhost:5432/Register
     username: postgres
     password: admin
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
