Agregado de Postgres y funcionamiento "total"
Hay algo raro que hace que en la pesteña de follow las cosaas se hagan con retraso pero algo de front lo cual es lo mas extraño, aparte de eso esa deberia ser la config y deploymente de la base de datos

--- a/postgres-configmap.yml
+++ b/postgres-configmap.yml
@@ -1,7 +1,76 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-db
+  name: postgres-simulatedb
 data:
   host: postgres
-  name: PrestaBanco
+  name: Simulate
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-registerdb
+data:
+  host: postgres
+  name: Register
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-requestdb
+data:
+  host: postgres
+  name: Request
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-evaluatedb
+data:
+  host: postgres
+  name: Evaluate
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-followdb
+data:
+  host: postgres
+  name: Follow
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-init-script
+data:
+  init.sql: |
+    -- Crear bases de datos solo si no existen
+    DO $$ BEGIN
+      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Simulate') THEN
+        CREATE DATABASE Simulate;
+      END IF;
+    END $$;
+
+    DO $$ BEGIN
+      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Register') THEN
+        CREATE DATABASE Register;
+      END IF;
+    END $$;
+
+    DO $$ BEGIN
+      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Request') THEN
+        CREATE DATABASE Request;
+      END IF;
+    END $$;
+
+    DO $$ BEGIN
+      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Evaluate') THEN
+        CREATE DATABASE Evaluate;
+      END IF;
+    END $$;
+
+    DO $$ BEGIN
+      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Follow') THEN
+        CREATE DATABASE Follow;
+      END IF;
+    END $$;
