--- a/eureka-deployment.yml
+++ b/eureka-deployment.yml
@@ -1,38 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eureka-service
+  name: eureka-deployment
   labels:
-    app: eureka-service
+    app: eureka-deployment
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: eureka-service
+      app: eureka-deployment
+  replicas: 1
   template:
     metadata:
       labels:
-        app: eureka-service
+        app: eureka-deployment
     spec:
       containers:
-      - name: eureka-service
-        image: tinyantu/eureka-service:latest
-        ports:
-        - containerPort: 8761   # Puerto interno del contenedor (opcional)
-        env:
-        - name: SERVER_PORT
-          value: "8761 "  # Puerto aleatorio
-        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
-          value: "http://eureka-service:8761/eureka"
+        - name: eureka-service
+          image: tinyantu/eureka-service:latest
+          ports:
+            - containerPort: 8081   # Puerto interno del contenedor (opcional)
+          env:
+            - name: SPRING_CLOUD_CONFIG_URI
+              value: http://config-service:8081
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: eureka-service
+  labels:
+    app: eureka-service
 spec:
   selector:
-    app: eureka-service
+    app: eureka-deployment
   ports:
-  - port: 80  # Puerto expuesto dentro del cluster
-    targetPort: 8761
-  type: ClusterIP
+    - protocol: TCP
+      port: 8761
+      targetPort: 8761
+  type: LoadBalancer
