--- a/postgres-configmap.yml
+++ b/postgres-configmap.yml
@@ -1,76 +1,18 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-simulatedb
+  name: postgres-config-map
+  labels:
+    app: postgres-config-map
 data:
-  host: postgres
-  name: Simulate
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-registerdb
-data:
-  host: postgres
-  name: Register
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-requestdb
-data:
-  host: postgres
-  name: Request
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-evaluatedb
-data:
-  host: postgres
-  name: Evaluate
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-followdb
-data:
-  host: postgres
-  name: Follow
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-init-script
-data:
-  init.sql: |
-    -- Crear bases de datos solo si no existen
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Simulate') THEN
-        CREATE DATABASE Simulate;
-      END IF;
-    END $$;
-
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Register') THEN
-        CREATE DATABASE Register;
-      END IF;
-    END $$;
-
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Request') THEN
-        CREATE DATABASE Request;
-      END IF;
-    END $$;
-
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Evaluate') THEN
-        CREATE DATABASE Evaluate;
-      END IF;
-    END $$;
-
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'Follow') THEN
-        CREATE DATABASE Follow;
-      END IF;
-    END $$;
+  POSTGRES_DB_HOST: postgres
+  #base de Simulate
+  POSTGRES_DB_Simulate: Simulate
+  #base de Register
+  POSTGRES_DB_Register: Register
+  #base de Request
+  POSTGRES_DB_Request: Request
+  #base de Evaluate
+  POSTGRES_DB_Evaluate: Evaluate
+  #base de Follow
+  POSTGRES_DB_Follow: Follow
