Modificacion de Deployments

--- a/config-deployment.yml
+++ b/config-deployment.yml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: config-service
+  name: config-deployment
   labels:
     app: config-service
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: config-service
+  replicas: 1
   template:
     metadata:
       labels:
-        app: config-service
+        app: config-service 
     spec:
       containers:
       - name: config-service
@@ -21,9 +21,9 @@ spec:
         - containerPort: 8081  # Puerto interno del contenedor (opcional)
         env:
         - name: SERVER_PORT
-          value: "8081"  # Puerto aleatorio
-        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
-          value: "http://eureka-service:8761/eureka"
+          value: "8081"  
+        - name: SPRING_CLOUD_CONFIG_URI
+          value: "https://github.com/TinyAntu/PrestaBanco_App_Microservicios_Backend.git" # URL del repositorio de configuración
 ---
 apiVersion: v1
 kind: Service
@@ -31,8 +31,10 @@ metadata:
   name: config-service
 spec:
   selector:
-    app: config-service
+    app: config-service  # Debe coincidir con las etiquetas del Deployment
   ports:
-  - port: 80  # Puerto expuesto dentro del cluster
-    targetPort: 8081
-  type: ClusterIP
+   - protocol: TCP
+     port: 8081  # Puerto expuesto dentro del cluster
+     targetPort: 8081  # Puerto del contenedor
+  type: ClusterIP  # Cambiar a LoadBalancer si necesitas acceso externo
+
