--- a/gateway-deployment.yml
+++ b/gateway-deployment.yml
@@ -1,29 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gateway-service
+  name: gateway-deployment
   labels:
     app: gateway-service
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: gateway-service
+  replicas: 1
   template:
     metadata:
       labels:
         app: gateway-service
     spec:
       containers:
-      - name: gateway-service
-        image: tinyantu/gateway-service:latest
-        ports:
-        - containerPort: 8080  # Puerto interno del contenedor (opcional)
-        env:
-        - name: SERVER_PORT
-          value: "8080"  # Puerto aleatorio
-        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
-          value: "http://eureka-service:8761/eureka"
+        - name: gateway-service
+          image: tinyantu/gateway-service:latest
+          ports:
+            - containerPort: 8081  
+          env:
+              - name: SPRING_CLOUD_CONFIG_URI # Nombre de la variable de entorno
+                value: http://config-service:8081
+              - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE # Nombre de la variable de entorno
+                value: http://eureka-service:8761
+              - name: eureka.instance.preferIpAddress
+                value: "true"
 ---
 apiVersion: v1
 kind: Service
@@ -33,6 +35,7 @@ spec:
   selector:
     app: gateway-service
   ports:
-  - port: 80  # Puerto expuesto dentro del cluster
-    targetPort: 8080
-  type: ClusterIP
+    - protocol: TCP
+      port: 8080  # Puerto expuesto dentro del cluster
+      targetPort: 8080  # Puerto del contenedor
+  type: LoadBalancer
