--- a/eureka-deployment.yml
+++ b/eureka-deployment.yml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: eureka-deployment
   labels:
-    app: eureka-deployment
+    app: eureka-service
 spec:
   selector:
     matchLabels:
-      app: eureka-deployment
+      app: eureka-service
   replicas: 1
   template:
     metadata:
       labels:
-        app: eureka-deployment
+        app: eureka-service
     spec:
       containers:
         - name: eureka-service
@@ -20,7 +20,7 @@ spec:
           ports:
             - containerPort: 8081   # Puerto interno del contenedor (opcional)
           env:
-            - name: SPRING_CLOUD_CONFIG_URI
+            - name: SPRING_CLOUD_CONFIG_URI # Nombre definido en el deployment de config-service
               value: http://config-service:8081
 ---
 apiVersion: v1
@@ -31,7 +31,7 @@ metadata:
     app: eureka-service
 spec:
   selector:
-    app: eureka-deployment
+    app: eureka-service
   ports:
     - protocol: TCP
       port: 8761
