--- a/evaluate-deployment.yml
+++ b/evaluate-deployment.yml
@@ -1,38 +1,63 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: evaluatecredit-service
+  name: evaluatecredit-deployment
   labels:
     app: evaluatecredit-service
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: evaluatecredit-service
+  replicas: 1
   template:
     metadata:
       labels:
         app: evaluatecredit-service
     spec:
       containers:
-      - name: evaluatecredit-service
-        image: tinyantu/evaluatecredit-service:latest
-        ports:
-        - containerPort: 8080  # Puerto interno del contenedor (opcional)
-        env:
-        - name: SERVER_PORT
-          value: "0"  # Puerto aleatorio
-        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
-          value: "http://eureka-service:8761/eureka"
+        - name: requestcredit-service-postgres
+          image: tinyantu/evaluatecredit-service:latest
+          ports:
+            - containerPort: 8081 # Puerto interno del contenedor 
+          env:
+            - name: SPRING_CLOUD_CONFIG_URI # Nombre de la variable de entorno
+              value: http://config-service:8081
+            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE # Nombre de la variable de entorno
+              value: http://eureka-service:8761
+            - name: eureka.instance.preferIpAddress
+              value: "true"
+            - name: DB_HOST # Nombre de la variable de entorno
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-configmap # Nombre del configmap
+                  key: POSTGRES_DB_HOST # Nombre de la clave del configmap
+            - name: POSTGRES_DB_Evaluate # Nombre de la variable de entorno en configmap
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-configmap # Nombre del configmap
+                  key: POSTGRES_DB_Evaluate # Nombre de la clave del configmap
+            - name: DB_USERNAME # Nombre de la variable de entorno
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-user-secret
+                  key: username # Nombre de la clave del secret
+            - name: DB_PASSWORD # Nombre de la variable de entorno
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-user-secret
+                  key: password # Nombre de la clave del secret
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: evaluatecredit-service
+  labels:
+    app: evaluatecredit-service
 spec:
   selector:
     app: evaluatecredit-service
   ports:
-  - port: 80  # Puerto expuesto dentro del cluster
-    targetPort: 8080
-  type: ClusterIP
+    - protocol: TCP
+      port: 8089
+      targetPort: 8089
+  type: LoadBalancer
