--- a/register-service/src/main/resources/bootstrap.yaml
+++ b/register-service/src/main/resources/bootstrap.yaml
@@ -1,3 +1,9 @@
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://eureka-service:8761/eureka/
 spring:
   application:
     name: register-service
@@ -6,9 +12,9 @@ spring:
       enabled: true
       uri: http://localhost:8081
   datasource:
-    url: jdbc:postgresql://localhost:5432/Register
-    username: postgres
-    password: admin
+    url: jdbc:postgresql://${DB_HOST}:5432/${POSTGRES_DB_Register}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
