--- a/postgres-deployment.yml
+++ b/postgres-deployment.yml
@@ -46,7 +46,7 @@ spec:
         - name: POSTGRES_DB
           valueFrom:
             configMapKeyRef:
-              name: postgres-db
+              name: postgres-configmap
               key: name
         ports:
         - containerPort: 5432
