--- a/postgres-configmap.yml
+++ b/postgres-configmap.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-config-map
+  name: postgres-configmap
   labels:
-    app: postgres-config-map
+    app: postgres-configmap
 data:
   POSTGRES_DB_HOST: postgres
   #base de Simulate
