Modificacion de deployment Micros
Estaba mal como se llamabna al secret de postgres porque estaba llamando alnombre el archivo y no como el nombre de la configuracion asiganda dentro del secret

--- a/evaluate-deployment.yml
+++ b/evaluate-deployment.yml
@@ -39,12 +39,12 @@ spec:
             - name: DB_USERNAME # Nombre de la variable de entorno
               valueFrom:
                 secretKeyRef:
-                  name: postgres-user-secret
+                  name: postgres-user-credentials
                   key: username # Nombre de la clave del secret
             - name: DB_PASSWORD # Nombre de la variable de entorno
               valueFrom:
                 secretKeyRef:
-                  name: postgres-user-secret
+                  name: postgres-user-credentials
                   key: password # Nombre de la clave del secret
 ---
 apiVersion: v1
