--- a/postgres-user-secret.yml
+++ b/postgres-user-secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: postgres-user-credentials
 type: Opaque
 data:
-  username: cG9zdGdyZXMK
-  password: YWRtaW4=
+  POSTGRES_USER: cGdkYg==
+  POSTGRES_PASSWORD: YWRtaW4=
