Modifiaciones de pruebas

--- a/evaluate-deployment.yml
+++ b/evaluate-deployment.yml
@@ -36,16 +36,16 @@ spec:
                 configMapKeyRef:
                   name: postgres-configmap # Nombre del configmap
                   key: POSTGRES_DB_Evaluate # Nombre de la clave del configmap
-            - name: DB_USERNAME # Nombre de la variable de entorno
+            - name: POSTGRES_USER # Nombre de la variable de entorno
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-user-credentials # Nombre del secret asignado dentro del archivo postgres-user-secret.yml
+                  key: POSTGRES_USER # Nombre de la clave del secret
+            - name: POSTGRES_PASSWORD # Nombre de la variable de entorno
               valueFrom:
                 secretKeyRef:
                   name: postgres-user-credentials
-                  key: username # Nombre de la clave del secret
-            - name: DB_PASSWORD # Nombre de la variable de entorno
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-user-credentials
-                  key: password # Nombre de la clave del secret
+                  key: POSTGRES_PASSWORD # Nombre de la clave del secret
 ---
 apiVersion: v1
 kind: Service
