--- a/postgres-user-secret.yml
+++ b/postgres-user-secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: postgres-user-credentials
 type: Opaque
 data:
-  POSTGRES_USER: cGdkYg==
+  POSTGRES_USER: cG9zdGdyZXM=
   POSTGRES_PASSWORD: YWRtaW4=
