--- a/simulate-deployment.yml
+++ b/simulate-deployment.yml
@@ -40,12 +40,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: postgres-user-credentials # Nombre del secret asignado dentro del archivo postgres-user-secret.yml
-                  key: username # Nombre de la clave del secret
+                  key: POSTGRES_USER # Nombre de la clave del secret
             - name: POSTGRES_PASSWORD # Nombre de la variable de entorno
               valueFrom:
                 secretKeyRef:
                   name: postgres-user-credentials
-                  key: password # Nombre de la clave del secret
+                  key: POSTGRES_PASSWORD # Nombre de la clave del secret
 ---
 apiVersion: v1
 kind: Service
