--- a/config-data/followCredit-service.yaml
+++ b/config-data/followCredit-service.yaml
@@ -1,11 +1,12 @@
 server:
   port: 0
+  
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://eureka-service:8761/eureka/
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
     prefer-ip-address: true
